Update the api schema to camelCase
